<resources>
    <string name="app_name">Shadowy</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_reminder_create">New Reminder</string>
    <string name="title_activity_settings">Settings</string>
    <string name="time_reminder">Time Reminder</string>
    <string name="loc_reminder">Location Reminder</string>

    <!--fields for new reminder screen-->
    <string name="field_title">Title</string>
    <string name="field_date" translatable="false">Date</string>
    <string name="field_loc">Location</string>
    <string name="field_radius">Radius</string>
    <string name="field_time">Reminder</string>
    <string name="field_repeat">Repeat</string>
    <string name="field_note">Note</string>
    <string name="field_attach">Pic</string>
    <string name="field_time_hint">Tap to set the time</string>
    <string name="field_date_hint">Tap to set the date</string>
    <string name="field_pic_hint">Tap to select pic</string>
    <string name="field_pic_hint2">Tap to change pic</string>
    <string name="field_radius_hint">Min 100 meters</string>
    <string name="field_search_hint">Search Map</string>
    <string name="field_repeat_next">Next Time</string>
    <string name="field_repeat_every">Every Time</string>
    <string name="field_loc_current">Current Location</string>
    <string name="field_loc_search">Search for a location</string>

    <!--Repeat popup-->
    <string name="repeat_heading">Repeat</string>
    <string name="repeat_disabled">Disabled</string>
    <string name="repeat_weekday">Weekdays</string>
    <string name="repeat_daily">Daily</string>
    <string name="repeat_weekly">Weekly</string>
    <string name="repeat_monthly">Monthly</string>
    <string name="repeat_yearly">Yearly</string>

    <!--error handling-->
    <string name="empty_title">Enter a task name</string>
    <string name="wrong_date">"Incorrect Date.Try Again"</string>
    <string name="empty_date">Enter a date for task</string>
    <string name="empty_loc">Select a Location</string>
    <string name="empty_time">Enter a time for task</string>
    <string name="enable_GPS">Please enable GPS</string>


    <!--popup-->
    <string name="popup_color_title">Select Color</string>
    <string name="popup_yes">Done</string>
    <string name="popup_no">Disable</string>
    <string name="dialog_ok">Got it!</string>

    <!--general purpose-->
    <string name="ok">OK</string>
    <string name="radius_info">Value in meters.\n\nFor best results, min radius should be set between 100 - 150 meters.
        \n\nWhen Wi-Fi is available location accuracy is usually between 20 - 50 meters.</string>



<string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
        AIzaSyADRfYyB9Sw2uy4l-lsAyXwEiAtZIkP9LQ
    </string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_notifications_ringtone_title">Notification Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_ringtone_summary">Select a ringtone</string>
    <string name="pref_notifications_sound_title">Sound</string>
    <string name="pref_notifications_sound_summary">Play notification sound</string>

    <string name="pref_notifications_vibrate_title">Vibrate</string>
    <string name="pref_notifications_vibrate_summary">Vibrate on notification</string>

    <string name="pref_notifications_navbar_title">Notifications in bar</string>
    <string name="pref_notifications_navbar_summary">Display notification in notification-bar</string>

    <string name="pref_notifications_popup_title">Notification Pop-Up</string>
    <string name="pref_notifications_popup_summary">Display notification pop-up</string>

    <string name="pref_theme_title">Color Theme</string>
    <string name="pref_theme_summary">Select the app\'s theme color</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="create_time_frag_title">Create Time Reminder</string>
    <string name="create_loc_frag_title">Create Location Reminder</string>

    <string-array name="nav_array">
        <item>Settings</item>
        <item>Help Us Translate</item>
        <item>More Free Apps</item>
        <item>Rate The App</item>
        <item>Share The App</item>
        <item>Contact Developer</item>
    </string-array>

</resources>
